--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ body {
     text-align: center;
 }
 
-.message {
-    display: inline-block;
+#message {
+    display: none;
     height: 25px;
     width: 250px;
     margin: auto;
@@ -61,6 +61,10 @@ body {
 
 .win {
     background-color: #12b90c;
+    color: #ffffff;
+}
+.tie {
+    background-color: #666565;
     color: #ffffff;
 }
 .lose {
